# neuraltrade-gpt

./: .env.example  .gitignore  README.md  docker-compose.yml  instructions.md
frontend/: Dockerfile  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/lib/: types.ts
infrastructure/kafka/: topics.sh
infrastructure/redis/: redis.conf
infrastructure/timescaledb/: init.sql
scripts/data-loader/: load_historical.py
scripts/runtime/: reference_frontend.py  reference_service.py
scripts/setup/: setup_vps.sh
services/ai-validation/: pom.xml
services/alert-service/: pom.xml
services/api-gateway/: Dockerfile  pom.xml
services/auth-service/: pom.xml
services/candle-engine/: Cargo.toml  Dockerfile
services/indicator-engine/: Cargo.toml  Dockerfile
services/market-data-gateway/: Cargo.toml  Dockerfile
services/market-data-gateway/src/: lib.rs  main.rs
services/market-data-gateway/src/broker/fyers/: mod.rs
services/market-data-gateway/src/broker/zerodha/: mod.rs
services/market-data-gateway/src/config/: mod.rs
services/market-data-gateway/src/feed/: mod.rs
services/market-data-gateway/src/models/: mod.rs
services/market-data-gateway/src/ringbuffer/: mod.rs
services/ml-service/: Dockerfile
services/scoreboard-engine/: Cargo.toml  Dockerfile
services/screener-engine/: Cargo.toml  Dockerfile
services/signal-service/: pom.xml
services/story-engine/: pom.xml
services/subscription-service/: pom.xml
(+72 files in other folders)
